2007-06-25  Calvin Gaisford <calvinrg@gmail.com> 

	* src/GiverService.cs: Removed sample code
	* src/GiverMenuItem.cs: Comment correction
	* src/Application.cs: Updated application to handle incoming
	  connections
	* src/Makefile.am: ADded new files
	* src/PayloadInfo.cs: new class to hold payload info on a transfer
	* src/ReceivingHandler.cs: new class to handle incoming giver requests
	  and handle the transfer
	* giver.mdp: Added new files

2007-06-25  Calvin Gaisford <calvinrg@gmail.com> 

	* src/GiverService.cs: Added TcpListener for transferring files
	* src/Application.cs: Changed the stop order
	* giver.mdp: Added needed references

2007-06-25  Calvin Gaisford <calvinrg@gmail.com> 

	* src/GiverMenuItem.cs: Fixed the banter-44 icon to be giver-44
	* src/Application.cs: Fixed up icon so it's off if nobody is there

2007-06-25  Calvin Gaisford <calvinrg@gmail.com> 

	* src/GiverMenuItem.cs: Updated the alignment of the menu items

2007-06-25  Calvin Gaisford <calvinrg@gmail.com> 

	* src/ComplexMenuItem.cs: code to handle cool new complex menu items
	* src/GiverMenuItem.cs: New menu item to handle graphics and such
	* src/Defines.cs.in: removed unneeded definitions
	* src/Application.cs: Added new menu support with graphics
	* src/ServiceLocator.cs: Updated to provide a count of current services
	  found
	* src/Makefile.am: Added new files
	* giver.mdp: Updated for new files
	* data/images/Makefile.am: Addded new back and white image
	* data/images/giveroff-24.png: new "off" image

2007-06-25  Scott Reeves <sreeves@novell.com> 

	* TODO: add todo item

2007-06-25  Calvin Gaisford <calvinrg@gmail.com> 

	* src/Application.cs: Updated menu with more information

2007-06-25  Calvin Gaisford <calvinrg@gmail.com> 

	* src/ServiceLocator.cs: Added code to correctly remove a service when
	  it goes down

2007-06-25  Calvin Gaisford <calvinrg@gmail.com> 

	* src/GiverService.cs: New service to advertize service
	* src/Application.cs: Added Service Locator