@@ -29,8 +29,17 @@ namespace Giver
 	/// </summary>
 	public class GiverMenuItem : ComplexMenuItem
 	{   
+		private Service service;
+
+		public Service Service
+		{
+			get { return service; }
+		}
+
 	    public GiverMenuItem(Service service) : base(false)
 	    {
+			this.service = service;
+
 	        HBox hbox = new HBox(false, 10);
 			Gtk.Image image = new Gtk.Image(Utilities.GetIcon("giver-44", 44));
 			hbox.PackStart(image, false, false, 0);
